adicionado os componentes de header e footer, adicionado 2 formas de binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<span>{{ title }} app is running!</span>
+<header>
+  <app-menu></app-menu>
+</header>
 
-<app-alo-mundo></app-alo-mundo>
+<main>
+  <div [hidden]="this.isHiden">
+    teste
+  </div>
+  <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
