Mapear componentes à rotas no módulo de rotas. Criar navegação entre páginas por meio de rotas. Passar dados via hierarquia de componentes, ou seja, usando @Input ou @Output. Passar dados entre componentes que representam diferentes telas via parâmetros de rotas.

--- a/src/app/pages/components/footer/footer.component.html
+++ b/src/app/pages/components/footer/footer.component.html
@@ -8,5 +8,6 @@
           class="img-responsive"
           height="20em"/>
     </div>
+    <ng-content></ng-content>
 </footer>
 <!-- fim menu -->
