--- a/src/app/pages/components/menu/menu.component.html
+++ b/src/app/pages/components/menu/menu.component.html
@@ -3,27 +3,27 @@
   <nav>
     <div class="nav-wrapper">
       <div class="container hide-on-med-and-down">
-        <a class="brand-logo" href="#">
+        <a routerLink="/home" class="brand-logo" >
           <img class="my-logo" src="/assets/resources/images/logo.png" />
         </a>
         <div class="right">
-          <a href="#">
+          <a routerLink="/list" >
             <img class="my-logo" src="/assets/resources/images/list.png" />
           </a>
-          <a href="#" style="margin-left: 16px">
+          <a routerLink="/settings" style="margin-left: 16px">
             <img class="my-logo" src="/assets/resources/images/settings.png" />
           </a>
         </div>
       </div>
 
       <div class="container hide-on-large-only">
-        <a href="#" class="left">
+        <a routerLink="/list" class="left">
           <img class="my-logo" src="/assets/resources/images/list.png" />
         </a>
-        <a class="brand-logo" href="#">
+        <a routerLink="/home" class="brand-logo">
           <img class="my-logo" src="/assets/resources/images/logo.png" />
         </a>
-        <a href="#" class="right" style="margin-left: 16px">
+        <a routerLink="/settings" class="right" style="margin-left: 16px">
           <img class="my-logo" src="/assets/resources/images/settings.png" />
         </a>
       </div>
