Mapear componentes à rotas no módulo de rotas. Criar navegação entre páginas por meio de rotas. Passar dados via hierarquia de componentes, ou seja, usando @Input ou @Output. Passar dados entre componentes que representam diferentes telas via parâmetros de rotas.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
 </header>
 
 <main>
-  <div [hidden]="this.isHiden">
-    teste
-  </div>
   <router-outlet></router-outlet>
 </main>
 
-<app-footer></app-footer>
+<app-footer>
+  <span>{{ this?.currentDate | date: "HH:mm:ss"}}</span>
+  - Latitude: {{ this.coords?.latitude }} e Longitude: {{ this.coords?.longitude}}
+</app-footer>
