adicionado ngfor, ngif pipes e observables o sistema já contem

--- a/src/app/modules/logged-in/pages/water-consumption/water-consumption.component.html
+++ b/src/app/modules/logged-in/pages/water-consumption/water-consumption.component.html
@@ -1,1 +1,15 @@
-<p>water-consumption works!</p>
+<table class="highlight" *ngIf="consum && consum!.length > 0">
+  <thead>
+    <tr>
+      <th>Horario</th>
+      <th>Quantidade</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr *ngFor="let c of consum">
+      <td>{{ c.time }}</td>
+      <td>{{ c.quant }}</td>
+    </tr>
+  </tbody>
+</table>
