--- a/src/app/modules/logged-out/pages/login/login.component.html
+++ b/src/app/modules/logged-out/pages/login/login.component.html
@@ -43,7 +43,7 @@
         </button>
       </div>
       <a routerLink="/register" >
-        <p>Cadastrar</p>
+        <p>Novo por aqui? Cadastre-se agora!</p>
       </a>
     </form>
   </div>
