--- a/src/app/modules/logged-in/pages/home/home.component.html
+++ b/src/app/modules/logged-in/pages/home/home.component.html
@@ -1,8 +1,64 @@
-<app-modal [show]="modal.show" [content]="modal" (closeEvent)="onCloseModal()"></app-modal>
-<form>
-<div [hidden]="this.isHiden">
-  teste {{ this.id }}
-  <button type="button" (click)="onClickEvent()">Teste</button>
+<div class="container contact">
+  <form>
+    <div style="display: flex; justify-content: space-around">
+      <a class="card-button" (click)="addItemDefault()">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/standard_cup.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(200)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_200ml.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(250)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_250ml.png"
+        />
+      </a>
+    </div>
+    <div style="display: flex; justify-content: space-around">
+      <a class="card-button" (click)="addItem(300)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_300ml.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(350)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_350ml.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(400)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_400ml.png"
+        />
+      </a>
+    </div>
+    <div style="display: flex; justify-content: space-around">
+      <a class="card-button" (click)="addItem(450)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/cup_450ml.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(500)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/bottle_500ml.png"
+        />
+      </a>
+      <a class="card-button" (click)="addItem(1000)">
+        <img
+          class="img-button"
+          src="../../../../../assets/resources/images/bottle_1L.png"
+        />
+      </a>
+    </div>
+  </form>
 </div>
-<p>home works!</p>
-</form>
